# NoProp

./: .gitignore  NoProp_simple.ipynb  README.md  pyproject.toml
src/noprop/: mnist.py  simple.py
